--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^16.5.0",
     "exceljs": "^4.4.0",
     "express": "^4.21.2",
+    "express-basic-auth": "^1.2.1",
     "jspdf": "^3.0.1",
     "mysql": "^2.18.1",
     "mysql2": "^3.14.0",
@@ -31,6 +32,6 @@
     "nodemon": "^3.1.10"
   },
   "engines": {
-  "node": ">=20"
+    "node": ">=20"
   }
 }
