--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "xlsx-style": "^0.8.13"
   },
   "devDependencies": {
+    "connect-livereload": "^0.6.1",
+    "livereload": "^0.10.3",
     "nodemon": "^3.1.10"
   },
   "engines": {
